# blankart

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  checklist.txt  comptime.bat  comptime.sh  git.exe.stackdump  vcpkg.json
PK3/: .gitattributes  ReadMe  buildpk3.bat  buildpk3.sh  pk3make.py
assets/: CMakeLists.txt
cmake/: Comptime.cmake
cmake/Modules/: GitUtilities.cmake
deployer/travis/: deployer_defaults.sh
extras/conf/: D3R-Config.cfg  D3RBinary-Config.cfg  (+1 more)
libs/: DLL-README.txt
scripts/: make-macos-universal.sh
src/: .k_hitlag.c.kate-swp  CMakeLists.txt  Makefile  NUL  Sourcefile  am_map.c  byteptr.h  command.c  command.h  comptime.c  config.h  config.h.in  console.c  console.h  cvars.cpp  d_clisrv.c  d_clisrv.h  d_event.h  d_main.c  d_main.cpp  d_main.h  d_net.c  d_net.h  d_netcmd.c  d_netcmd.h  d_netfil.c  d_netfil.h  d_player.h  d_think.h  d_ticcmd.h  deh_lua.c  deh_lua.h  deh_soc.c  deh_soc.h  deh_tables.c  deh_tables.h  dehacked.c  discord.c  discord.h  doomdata.h  (+204 more)
src/objects/: CMakeLists.txt  Sourcefile  adventure-air-booster.c  ball-switch.cpp  battle-ufo.cpp  bungee.c  charge.c  checkpoint.cpp  cloud.c  crate.cpp  dash-rings.c  destroyed-kart.cpp  dlzrocket.c  dlzseasaw.c  duel-bomb.c  eggbanana.c  fuel.cpp  gachabom-rebound.cpp  gardentop.c  hyudoro.c  instawhip.c  item-debris.c  jawz.c  loops.c  loops.cpp  manta-ring.c  mega-barrier.cpp  monitor.c  orbinaut.c  pulley.cpp  random-item.c  rideroid.c  ring-shooter.c  sealed-star.c  shadow.cpp  spb.c  super-flicky.cpp  trick-balloon.c  ufo.c
src/objects/versus/: blendeye.c
(+193 files in other folders)
