target_sources(SRB2SDL2 PRIVATE
	hyudoro.c
	item-debris.c
	spb.c
	manta-ring.c
	orbinaut.c
	jawz.c
	duel-bomb.c
	ufo.c
	monitor.c
	item-spot.c
	loops.cpp
	ring-shooter.c
	audience.c
	random-item.c
	servant-hand.c
	battle-ufo.cpp
	ark-arrow.c
	dash-rings.c
	sneaker-panel.c
	emerald.c
	checkpoint.cpp
	rideroid.c
	bungee.c
	eggball.c
	dlzrocket.c
	dlzseasaw.c
	gpzseasaw.c
	dlzothers.c
	wpzturbine.c
	wpzothers.c
	shadow.cpp
	ball-switch.cpp
	charge.c
	frost-thrower.cpp
	ivoball.cpp
	crate.cpp
	spear.cpp
	fuel.cpp
	rocks.cpp
	emz-faucet.cpp
	trick-balloon.c
	cloud.c
	waterfall-particle.c
	sealed-star.c
	talk-point.cpp
	adventure-air-booster.c
	pulley.cpp
)

add_subdirectory(versus)
